--- a/reports/sections/commonSections/commonIntro.Rmd
+++ b/reports/sections/commonSections/commonIntro.Rmd
@@ -12,14 +12,16 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.align="lef
 ```
 
 ```{r echo=FALSE, include=FALSE, cache=FALSE}
+library(kableExtra)
+library(knitr)
+
 if (!exists("mapDataList")){
   source(here::here("config.R"))
   lapply(list.files(here::here("reports/R"), pattern = ".[Rr]$", full.names = TRUE), source) # check helpers.R for a   list of packages
   studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson")) # last area from app.
   intro_setup(studyArea, env = environment())
   #  need to clear this global env variable here.
-  if (exists("commonObis", envir=globalenv())) { 
-    rm("commonObis", envir=globalenv())
-  }
+  obisEnv <- new.env()
+  obisEnv$commonObis <- TRUE
 }
 ```
