--- a/app/templates/FR/species/fish_inverts.Rmd
+++ b/app/templates/FR/species/fish_inverts.Rmd
@@ -1,3 +1,33 @@
-## **Fish and Invertebrate Section** (FR)
+---
+output: html_document
+editor_options:
+  chunk_output_type: console
+---
 
-### **Ecosystem Research Vessel (RV) Survey**  
+## **POISSONS ET INVERTÉBRÉS**
+
+La présente section décrit les résultats tirés des sources de données suivantes : Enquête sur les navires de recherche (NR) dans les Maritimes, Base de données des relevés de l’industrie (BDRI), Système d’information sur les pêches des Maritimes (SIPMAR) et Système d’information sur la biodiversité des océans (SIBO). Les extrants propres à une zone sont fournis dans des sous-sections marquées selon la source de données. Des descriptions des données sources et des références et personnes-ressources appropriées sont fournis au début de chaque sous-section.
+
+
+```{r child = here::here("reports/sections/rv/rv_fr.Rmd")}
+```
+
+```{r child = here::here("reports/sections/pasBay/pasBay_fr.Rmd")}
+```
+
+```{r child = here::here("reports/sections/ilts/ilts_fr.Rmd")}
+```
+
+```{r child = here::here("reports/sections/isdb-marfis/isdbMarfis_fr.Rmd")}
+```
+
+```{r child = here::here("reports/sections/sturg/sturg_fr.Rmd")}
+```
+
+```{r child = here::here("reports/sections/ocearch/ocearch_fr.Rmd")}
+```
+
+```{r child = here::here("reports/sections/obis/obisFish_fr.Rmd")}
+```
+
+
