--- a/reports/sections/narwc/narwc_en.Rmd
+++ b/reports/sections/narwc/narwc_en.Rmd
@@ -6,7 +6,10 @@ output:
     theme: paper
 bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ---
-```{r child = here::here("reports/commonSections/commonIntro.Rmd")}
+```{r child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
+``` 
+
+```{r eval=FALSE}
 if (FALSE) { #load in data:
   lapply(list.files(here::here("reports/R"), pattern = ".[Rr]$", full.names = TRUE), source)
   studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson")) 
@@ -14,7 +17,7 @@ if (FALSE) { #load in data:
 }
 ```
 
-```{r child = here::here("reports/commonSections/commonCet.Rmd")}
+```{r child = here::here("reports/sections/commonSections/commonCet.Rmd")}
 ```
 
 ### **North Atlantic Right Whale Consortium (NARWC) Sightings Database**{#NARWC-section}
