--- a/reports/sections/obis/obisCet_en.Rmd
+++ b/reports/sections/obis/obisCet_en.Rmd
@@ -5,7 +5,10 @@ output:
     theme: paper
 bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ---
-```{r child = here::here("reports/commonSections/commonIntro.Rmd")}
+```{r child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
+``` 
+
+```{r eval=FALSE}
 if (FALSE) { #load in data:
   lapply(list.files(here::here("reports/R"), pattern = ".[Rr]$", full.names = TRUE), source)
   studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson")) 
@@ -13,20 +16,24 @@ if (FALSE) { #load in data:
 }
 ```
 
-```{r child = here::here("reports/commonSections/commonCet.Rmd")}
-```
-
-
 ```{r obis-gbif-cet-load, include=FALSE}
 load_rdata(c("obisCet_rr", "gbifCet_rr"), regionStr, env = environment())
-
+if(!exists("obisEnv")){
+  assign("obisEnv", new.env(), envir = knitr::knit_global())
+  obisEnv$commonObis <- TRUE
+}
 ```
 
-```{r cet-short-obis, results = 'asis', eval=exists('commonObis')}
+```{r child = here::here("reports/sections/commonSections/commonCet.Rmd")}
+```
+
+
+```{r cet-short-obis, results = 'asis', eval=!obisEnv$commonObis}
 cat('### **Ocean Biodiversity Information System and Global Biodiversity Information Facility** \n\n To avoid duplication of text, please refer to the overview for OBIS and GBIF provided in the Fish and Invertebrates section: [OBIS section](#OBIS-section). ')
 ```
 
-```{r child = here::here("reports/obis/obisCommon_en.Rmd"), eval=!exists('commonObis')}
+
+```{r child = here::here("reports/sections/obis/obisCommon_en.Rmd"), eval=obisEnv$commonObis}
 # chunk will only run if commonObis variable does not exist, set in commonObis.rmd.
 ```
 
