--- a/reports/sections/obis/obisCommon_en.Rmd
+++ b/reports/sections/obis/obisCommon_en.Rmd
@@ -12,8 +12,8 @@ editor_options:
 ### **Ocean Biodiversity Information System (OBIS)**{#OBIS-section}
 
 ```{r obis-load, include=FALSE}
-# prevent furture common obis sections from running
-assign('commonObis', TRUE, envir = globalenv()) 
+# prevent future common obis sections from running
+obisEnv$commonObis <- FALSE
 load_rdata(c("obisFish_rr"), regionStr, env = environment())
 ```
 
