--- a/reports/sections/sdm/sdm_en.Rmd
+++ b/reports/sections/sdm/sdm_en.Rmd
@@ -6,7 +6,10 @@ output:
     theme: paper
 bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ---
-```{r child = here::here("reports/commonSections/commonIntro.Rmd")}
+```{r child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
+```  
+
+```{r eval=FALSE}
 if (FALSE) { #load in data:
   lapply(list.files(here::here("reports/R"), pattern = ".[Rr]$", full.names = TRUE), source)
   studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson")) 
@@ -48,7 +51,8 @@ tableSDM <- data.frame("Fin Whale" = !is.null(clippedFin$studyData),
                         "Sei Whale" = !is.null(clippedSei$studyData),
                         check.names = FALSE)
 
-summarySDMTable <- data.frame("Species" = names(tableSDM), "present" = transpose(tableSDM)$V1)
+summarySDMTable <- data.frame("Species" = names(tableSDM), "present" = t(tableSDM),
+                              row.names = NULL)
 summaryHabTable <- add_to_hab_summary(summaryHabTable, "SDM", "[SDM](#sdm-section)", summarySDMTable, "Species", "present")
 
 ```
