--- a/reports/sections/commonSections/commonIntro.Rmd
+++ b/reports/sections/commonSections/commonIntro.Rmd
@@ -20,7 +20,7 @@ if (!exists("mapDataList")){
   lapply(list.files(here::here("reports/R"), pattern = ".[Rr]$", full.names = TRUE), source) # check helpers.R for a   list of packages
   studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson")) # last area from app.
   intro_setup(studyArea, env = environment())
-  #  need to clear this global env variable here.
+  #  need to reset this variable here.
   obisEnv <- new.env()
   obisEnv$commonObis <- TRUE
 }
