--- a/reports/sections/blueWhaleHab/bwhab_fr.Rmd
+++ b/reports/sections/blueWhaleHab/bwhab_fr.Rmd
@@ -5,7 +5,7 @@ output:
     theme: paper
 bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ---
-```{r child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
+```{r bwhab-load-common, child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
 ```
 
 ```{r eval=FALSE}
