--- a/reports/sections/electrofishing/ef_en.rmd
+++ b/reports/sections/electrofishing/ef_en.rmd
@@ -5,7 +5,7 @@ output:
     theme: paper
 bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ---
-```{r child = here::here("reports/sections/commonSections/commonIntro.Rmd")} 
+```{r ef-load-common, child = here::here("reports/sections/commonSections/commonIntro.Rmd")} 
 ``` 
 
 ```{r eval=FALSE}
