--- a/reports/sections/template/template_fr.rmd
+++ b/reports/sections/template/template_fr.rmd
@@ -6,7 +6,7 @@ output:
 bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ---
 
-```{r child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
+```{r template-load-common, child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
 ```
 
 ```{r eval=FALSE}
