--- a/reports/sections/whelk/whelk_en.rmd
+++ b/reports/sections/whelk/whelk_en.rmd
@@ -6,7 +6,7 @@ output:
 bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ---
 
-```{r child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
+```{r whelk-load-common, child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
 ```
 
 ```{r eval=FALSE}
