--- a/reports/sections/commonSections/commonIntro.Rmd
+++ b/reports/sections/commonSections/commonIntro.Rmd
@@ -21,7 +21,7 @@ if (!exists("mapDataList")){
   studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson")) # last area from app.
   intro_setup(studyArea, env = environment())
   #  need to reset this variable here.
-  obisEnv <- new.env()
-  obisEnv$commonObis <- TRUE
+  rrEnv <- new.env()
+  rrEnv$commonObis <- TRUE
 }
 ```
