--- a/reports/sections/docks/docks_en.rmd
+++ b/reports/sections/docks/docks_en.rmd
@@ -6,7 +6,13 @@ output:
 bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ---
 
-```{r child = here::here("sections/commonSections/commonIntro.Rmd")}
+```{r docks-load-common, child = here::here("sections/commonSections/commonIntro.Rmd")}
+```
+
+```{r docks-load-common-ha, child = here::here("reports/sections/commonSections/commonHumanActivities.Rmd")} 
+``` 
+
+```{r eval = False}
 if (FALSE) { 
   # load in generic data, e.g.functions, study area, and base maps into the 
   # environment, when knitting, these will be loaded through the child rmd.
@@ -41,6 +47,15 @@ writeLines(noquote(docks_rr$text$en))
 # clip the data to the Study and Map areas:
 docksOutputList <- master_intersect(docks_rr$data_sf, mapDataList, getRegion=TRUE)
 
+```
+
+
+```{r docks-haTable, echo=FALSE, results='asis'}
+if (!is.null(docksOutputList$studyData)) {
+  rrEnv$haClassTable$Manmade.Structures <- list("Coastal" = FALSE, 
+                                                "Offshore" = FALSE, 
+                                                "Shoreline" = TRUE)
+}
 ```
 
 ```{r docks-check, echo=FALSE, results='asis',}
