--- a/reports/sections/obis/obisCommon_en.Rmd
+++ b/reports/sections/obis/obisCommon_en.Rmd
@@ -13,7 +13,7 @@ editor_options:
 
 ```{r obis-load, include=FALSE}
 # prevent future common obis sections from running
-obisEnv$commonObis <- FALSE
+rrEnv$commonObis <- FALSE
 load_rdata(c("obisFish_rr"), regionStr, env = environment())
 ```
 
