Changed .bib files

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -419,3 +419,80 @@ author = {Noreen E. Kelly and Javier Guijarro-Sabaniel and Rebecca Zimmerman},
   url = {https://github.com/Maritimes/Mar.datawrangling}
 }
 
+@techreport{DFO2007_RPA,
+  author = {DFO},
+  title = {Revised Protocol for Conducting Recovery Potential Assessments},
+  institution = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep. 2007/039},
+  year = {2007},
+  howpublished = {Retrieved from https://waves-vagues.dfo-mpo.gc.ca/Library/330905.pdf}
+}
+
+@techreport{DFO2010_Guidelines,
+  author = {DFO},
+  title = {Guidelines for Terms and Concepts Used in the Species at Risk Program},
+  institution = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep. 2009/065},
+  year = {2010},
+  howpublished = {Retrieved from https://waves-vagues.dfo-mpo.gc.ca/Library/340596.pdf}
+}
+
+@techreport{DFO2014_Threat,
+  author = {DFO},
+  title = {Guidance on Assessing Threats, Ecological Risk and Ecological Impacts for Species at Risk},
+  institution = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep. 2014/013},
+  year = {2014},
+  howpublished = {Retrieved from https://waves-vagues.dfo-mpo.gc.ca/Library/363987.pdf}
+}
+
+@misc{DFO2014_Whale,
+  author = {DFO},
+  title = {Recovery Strategy for the North Atlantic Right Whale (Eubalaena glacialis) in Atlantic Canadian Waters [Final]. Species at Risk Act Recovery Strategy Series. Fisheries and Oceans Canada, Ottawa. vii + 68 pp.},
+  year = {2014},
+  howpublished = Retrieved from: {https://www.sararegistry.gc.ca/virtual_sara/files/plans/rs_bnan_narw_am_0414_e.pdf}
+}
+
+@techreport{DFO2020_Turtles,
+  author = {DFO},
+  title = {Threat Assessment for the Leatherback Sea Turtle (Dermochelys coriacea), Northwest Atlantic Subpopulation},
+  institution = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep. 2020/039},
+  year = {2020},
+  howpublished = {Retrieved from https://publications.gc.ca/collections/collection_2020/mpo-dfo/fs70-7/Fs70-7-2020-039-eng.pdf}
+}
+
+@misc{IAA,
+  author = {IAA (Impact Assessment Act)},
+  title = {An Act respecting a federal process for impact assessments and the prevention of significant adverse environmental effects},
+  year = {2019},
+  howpublished = {Retrieved from https://laws-lois.justice.gc.ca/eng/acts/I-2.75/FullText.html}
+}
+
+@article{N,
+  title = {Missing the safety net: evidence for inconsistent and insufficient management of at-risk marine fishes in Canada},
+  author = {McDevitt-Irwin, J.M. and Fuller, S.D. and Grant, C. and Baum, J.K.},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  volume = {72},
+  number = {10},
+  pages = {1596-1608},
+  year = {2015},
+  doi = {https://doi.org/10.1139/cjfas-2015-0030}
+}
+
+@article{montgomery2021_role,
+  title = {The role of science advice in recovery potential assessments in freshwater fish listing decisions under the Canadian Species at Risk Act},
+  author = {Montgomery, F.A and Stratton, N. and Bzonek, P.A. and Campbell, S.E. and Castañeda,R.A. and Chenery, E.S. and Gallage, K. and Heer, T. and Kindree, M.M. and Mandrak, N.E.},
+  journal = {FACETS},
+  volume = {6},
+  number = {1},
+  pages = {1247-1259},
+  year = {2021},
+  doi = {https://doi.org/10.1139/facets-2020-0091}
+}
+
+@article{newediuk2021_sociopolitical,
+  title = {Sociopolitical factors drive conservation planning timelines: A Canadian case study with global implications},
+  author = {Newediuk, L. and Ethier, J.P. and Boyle, S.P. and Aubin, J.A. and Balluffi-Fry, J. and Dedeban, E. and Laforge, M.P. and Prokopenko, C.M. and Turner, J.W. and Webber, Q.M.R. and Wal, E.V.},
+  journal = {Biological Conservation},
+  volume = {257},
+  issue = {109091},
+  year = {2021},
+  doi = {https://doi.org/10.1016/j.biocon.2021.109091}
+}
