add common intro to threats section

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -447,7 +447,7 @@ author = {Noreen E. Kelly and Javier Guijarro-Sabaniel and Rebecca Zimmerman},
   author = {DFO},
   title = {Recovery Strategy for the North Atlantic Right Whale (Eubalaena glacialis) in Atlantic Canadian Waters [Final]. Species at Risk Act Recovery Strategy Series. Fisheries and Oceans Canada, Ottawa. vii + 68 pp.},
   year = {2014},
-  howpublished = Retrieved from: {https://www.sararegistry.gc.ca/virtual_sara/files/plans/rs_bnan_narw_am_0414_e.pdf}
+  howpublished = {Retrieved from: https://www.sararegistry.gc.ca/virtual_sara/files/plans/rs_bnan_narw_am_0414_e.pdf}
 }
 
 @techreport{DFO2020_Turtles,
